Свёрстан блок основных новостей

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <title>Охуительный сайт</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    <div id="header">
-        <div id="header2">
-            <div id="login"></div>
-        </div>
+<div id="header">
+    <div id="header2">
+        <div id="login"></div>
     </div>
+</div>
 
 <div id="all">
-    <div id="left"><!-- Left Blocks -->
+    <div id="left">
+        <!-- Left Blocks -->
         <a href="#" title="На главную" id="to_main"><img src="i/logo.jpg" alt="Boommax"></a>
         <div class="left_block">
             <div class="header">Коротко...</div>
@@ -22,19 +24,23 @@
                 Весь материал представлен преимущественно в виде советов и анонсов последних событий.
             </div>
         </div>
-
     </div>
-
-    
-
-    <div id="main"><!-- Main Blocks -->
-        <h3 class="title">
-            <a href="#">В каких условиях делают ринопластику носа?</a>
-        </h3>
-
+    <div id="main">
+        <!-- Main Blocks -->
+        <div class="main_block">
+            <h3>
+                <a href="#">В каких условиях делают ринопластику носа?</a>
+            </h3>
+            <div class="content">
+                <img src="upload/dzhigurda.jpg" alt="В каких условиях делают ринопластику носа?" />
+                <p>
+                    Ринопластика носа достаточно популярна в последнее время. Но когда такая операция необходима?
+                    Итак, во-первых, когда есть сильное несоответствие канонам эстетики красоты носа
+                </p>
+            </div>
+            <div class="footer ">asgsdg</div>
+        </div>
     </div>
-
 </div>
-
 </body>
 </html>
