--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
@@ -29,7 +27,7 @@
         <!-- Main Blocks -->
         <div class="main_block">
             <h3>
-                <a href="#">В каких условиях делают ринопластику носа?</a>
+                <a href="#">ТРАДИЦИОННЫЕ МЕТОДЫ ЛЕЧЕНИЯ ГЕМОРРОЯ</a>
             </h3>
             <div class="content">
                 <img src="upload/dzhigurda.jpg" alt="В каких условиях делают ринопластику носа?" />
