--- a/index.html
+++ b/index.html
@@ -30,13 +30,19 @@
                 <a href="#">ТРАДИЦИОННЫЕ МЕТОДЫ ЛЕЧЕНИЯ ГЕМОРРОЯ</a>
             </h3>
             <div class="content">
-                <img src="upload/dzhigurda.jpg" alt="В каких условиях делают ринопластику носа?" />
+                <img src="i/gemorroi.jpg" alt="ТРАДИЦИОННЫЕ МЕТОДЫ ЛЕЧЕНИЯ ГЕМОРРОЯ" />
                 <p>
                     Ринопластика носа достаточно популярна в последнее время. Но когда такая операция необходима?
                     Итак, во-первых, когда есть сильное несоответствие канонам эстетики красоты носа
                 </p>
+                <div class="fulltag">
+                    Добавлено 26-03-2013, 17:54 |
+                    в <a href="http://boommax.ru/index.php?do=cat&amp;category=krasota">Красота и здоровье</a> |
+                    Комментариев  0 |
+                    Просмотров  36 |
+                </div>
             </div>
-            <div class="footer ">asgsdg</div>
+
         </div>
     </div>
 </div>
