css/style.css index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
                 <div class="fulltag">
                     Добавлено 26-03-2013, 17:54 |
-                    в <a href="http://boommax.ru/index.php?do=cat&amp;category=krasota">Красота и здоровье</a> |
+                    в <a href="#">Красота и здоровье</a> |
                     Комментариев  0 |
                     Просмотров  36 |
                 </div>
