--- a/index.html
+++ b/index.html
@@ -42,8 +42,29 @@
                     Просмотров  36 |
                 </div>
             </div>
-
         </div>
+        <!-- conent -->
+    </div>
+    <div class="footer">
+        <p>
+            |
+            <a href="#">Главная</a>
+            |
+            <a href="#">О сайте</a>
+            |
+            <a href="#">Правила</a>
+            |
+            <a href="#">Обратная связь</a>
+            |
+            <a href="#">Правила публикаций</a>
+            |
+        </p>
+        <p>Все права защищены. Копирование материала запрещено.</p>
+        <p>
+            © 2010
+            <a href="#">Полезные и интересные статьи, новости и другие материалы</a>
+            &nbsp;&nbsp;
+        </p>
     </div>
 </div>
 </body>
